[package]
name = "bls_signature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls-signatures = "0.15.0"
rand = {version = "0.8.5"}
rand_chacha = "0.3.1"
bls12_381 =  {version="0.8.0", features=["pairing", "alloc"]}
pairing_lib = { version = "0.23.0", package = "pairing" }